--- a/Virtuelizacija_procesa_zadatak2/Virtuelizacija_procesa_zadatak2/Server.csproj
+++ b/Virtuelizacija_procesa_zadatak2/Virtuelizacija_procesa_zadatak2/Server.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -45,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBManipulation\IData.cs" />
+    <Compile Include="Implementations\SendFile.cs" />
+    <Compile Include="InMemoryDataBase\InMemoryDataBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlManipulation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -57,5 +62,6 @@
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
