--- a/Virtuelizacija_procesa_zadatak2/Common/Common.csproj
+++ b/Virtuelizacija_procesa_zadatak2/Common/Common.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Commands\ISendFile.cs" />
+    <Compile Include="Enum\MessageType.cs" />
+    <Compile Include="Items\Audit.cs" />
+    <Compile Include="Items\ImportedFile.cs" />
+    <Compile Include="Items\Load.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\DirUtils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
