--- a/Virtuelizacija_procesa_zadatak2/Common/Common.csproj
+++ b/Virtuelizacija_procesa_zadatak2/Common/Common.csproj
@@ -44,12 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\ISendFile.cs" />
-    <Compile Include="Enum\MessageType.cs" />
-    <Compile Include="Items\Audit.cs" />
-    <Compile Include="Items\ImportedFile.cs" />
-    <Compile Include="Items\Load.cs" />
+    <Compile Include="FileManipulations\CSVFileResult.cs" />
+    <Compile Include="FileManipulations\FileMemOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DirUtils.cs" />
+    <Compile Include="Utils\MoveToArray.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
